--- a/assets/src/sass/blocks/columns.scss
+++ b/assets/src/sass/blocks/columns.scss
@@ -217,10 +217,10 @@
       }
       &:after {
         content: '';
-        background: url("../../../assets/icons/leaderhip_community_bg_after.png");
+        background: url("/wp-content/uploads/2023/05/REACT-ASSETS-3-4-1.png");
         background-size: cover;
         position: absolute;
-        width: 39.3rem;
+        width: 30.8rem;
         height: 32.5rem;
         top: -8rem;
         right: -11rem;
